--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "ljdb": "^1.0.4",
     "telegraf": "^4.16.3"
   }
